--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,20 @@ jobs:
       # Cleanup The Actions Workspace Using Custom Composite Run Actions
     #  - uses: rokibhasansagar/slimhub_actions@main
 
-      - name: Clone The Secret Mirror Repository
+     - name: Clone -bot repo and Generate config
         run: |
-          git clone https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.SOURCE }} source
+          git clone https://github.com/botgram/shell-bot --depth 1 shell-bot
+          cd shell-bot
+          cat << EOF > config.json
+          {
+            "authToken": "${{ secrets.authToken }}",
+            "owner": ${{ secrets.ownerID }}
+          }
+          EOF
+
+  #    - name: Clone The Secret Mirror Repository
+   #     run: |
+    #      git clone https://${GitHubName}:${{ secrets.GH_TOKEN }}@github.com/${{ secrets.SOURCE }} source
       - name: Compile The Mirroring Docker Container
         run: |
           cd source || exit 1
