--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,9 @@ jobs:
           cat << EOF > config.json
           {
             "API_ID": "${{ secrets.API_ID }}",
-            "API_HASH": ${{ API_HASH }}, 
-            "BOT_TOKEN": ${{ secrets.BOT_TOKEN }}, 
-            "PASSWORD": ${{ secrets.PASSWORD }} 
+            "API_HASH": "${{ secrets.API_HASH }}", 
+            "BOT_TOKEN": "${{ secrets.BOT_TOKEN }}", 
+            "PASSWORD": "${{ secrets.PASSWORD }}" 
           }
           EOF
   #    - name: Clone The Secret Mirror Repository
