--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,8 @@ jobs:
         timeout-minutes: 330
         continue-on-error: true
         run: |
-           docker run -i botkaca
+      #     docker run -i botkaca
+python3 -m bot
         #  docker run --privileged --rm -i personal
       - name: Workflow Looping
         run: |
