--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,7 +53,8 @@ jobs:
         continue-on-error: true
         run: |
       #     docker run -i botkaca
-python3 -m bot
+CMD ["python3", "-m", "bot"]
+#python3 -m bot
         #  docker run --privileged --rm -i personal
       - name: Workflow Looping
         run: |
