--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
       #     docker run -i botkaca
 CMD ["python3", "-m", "bot"]
-#python3 -m bot
+#python3 -m bot;
         #  docker run --privileged --rm -i personal
       - name: Workflow Looping
         run: |
