--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,12 +29,12 @@ jobs:
         run: |
           git clone https://github.com/Raj9039852537/botkaca --depth 1 botkaca 
           cd botkaca
-          cat > config.ini
-          {
-            "API_ID" = "${{ secrets.API_ID }}",
-            "API_HASH" = "${{ secrets.API_HASH }}", 
-            "BOT_TOKEN" = "${{ secrets.BOT_TOKEN }}", 
-            "PASSWORD" = "${{ secrets.PASSWORD }}" 
+          cat << EOF > config.ini
+          [pyrogram] 
+            API_ID = ${{ secrets.API_ID }}
+            API_HASH = ${{ secrets.API_HASH }}
+            BOT_TOKEN = ${{ secrets.BOT_TOKEN }} 
+            PASSWORD = ${{ secrets.PASSWORD }}
           }
           EOF   
   #    - name: Clone The Secret Mirror Repository
