--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,7 +34,7 @@ jobs:
             API_ID = ${{ secrets.API_ID }}
             API_HASH = ${{ secrets.API_HASH }}
             BOT_TOKEN = ${{ secrets.BOT_TOKEN }} 
-            PASSWORD = ${{ secrets Password }}
+            PASSWORD = ${{ secrets.PASSWORD }}
           EOF   
   #    - name: Clone The Secret Mirror Repository
    #     run: |
